Remove ShadowResources.{getResourceLoader(),getQualifiers(),getResName()} prefer to obtain these directly from the ShadowAssetManager.
The goal is to remove as much shadow code from resources as possible, pushing down resource resolution to the AssetManager.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -409,7 +409,7 @@ public final class ShadowAssetManager {
     return new Resource(value, resName);
   }
 
-  ResourceLoader getResourceLoader() {
+  public ResourceLoader getResourceLoader() {
     if (resourceLoader == null) {
       resourceLoader = ShadowApplication.getInstance().getResourceLoader();
     }
