--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
@@ -541,6 +541,7 @@ public class ShadowActivity extends ShadowContextThemeWrapper {
     invoker.call("onCreate", Bundle.class).with(outState);
     invoker.call("onStart").withNothing();
     invoker.call("onRestoreInstanceState", Bundle.class).with(outState);
+    invoker.call("onPostCreate", Bundle.class).with(outState);
     invoker.call("onResume").withNothing();
   }
 
