* Remove ShadowContext class. @Implementation methods moved to ShadowContextImpl which is the base context delegated to via ContextWrapper. * Remove ComponentController.withApplication() application should be specified via @Config(application = "...") attribute * Remove ShadowActivity.getApplication() + {get,set}TestApplication() * Remove ShadowActivity.pauseAndThenResume() since lifecycle should be controlled through component controller. * Migrate more unattached contexts in tests (e.g: new Activity()) to propertly attached contexts, e.g: Robolectric.setupActivity()

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
@@ -13,6 +13,7 @@ import android.content.ServiceConnection;
 import android.content.SharedPreferences;
 import android.content.pm.PackageManager;
 import android.os.Bundle;
+import android.os.Environment;
 import android.os.FileUtils;
 import android.os.Handler;
 import android.view.Display;
@@ -38,7 +39,7 @@ import static org.robolectric.util.ReflectionHelpers.ClassParameter.from;
  * Shadow for {@code android.content.ContextImpl}.
  */
 @Implements(className = ShadowContextImpl.CLASS_NAME)
-public class ShadowContextImpl extends ShadowContext {
+public class ShadowContextImpl {
   public static final String CLASS_NAME = "android.app.ContextImpl";
   private static final Map<String, String> SYSTEM_SERVICE_MAP = new HashMap<>();
   private final Map<String, RoboSharedPreferences> roboSharedPreferencesMap = new HashMap<>();
@@ -362,14 +363,12 @@ public class ShadowContextImpl extends ShadowContext {
   }
 
   @Implementation
-  @Override
   public File getExternalCacheDir() {
-    return super.getExternalCacheDir();
+    return Environment.getExternalStorageDirectory();
   }
 
   @Implementation
-  @Override
   public File getExternalFilesDir(String type) {
-    return super.getExternalFilesDir(type);
+    return Environment.getExternalStoragePublicDirectory(type);
   }
 }
