--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
@@ -69,7 +69,6 @@ public class ShadowActivity extends ShadowContextThemeWrapper {
   private int streamType = -1;
   private boolean mIsTaskRoot = true;
   private Menu optionsMenu;
-  private Application testApplication;
   private ComponentName callingActivity;
 
   public void __constructor__() {
@@ -96,19 +95,6 @@ public class ShadowActivity extends ShadowContextThemeWrapper {
       return true;
     }
     return false;
-  }
-
-  public void setTestApplication(Application testApplication) {
-    this.testApplication = testApplication;
-  }
-
-  public Application getTestApplication() {
-    return testApplication;
-  }
-
-  @Implementation
-  public final Application getApplication() {
-    return testApplication != null ? testApplication : RuntimeEnvironment.application;
   }
 
   public void setCallingActivity(ComponentName activityName) {
@@ -414,27 +400,24 @@ public class ShadowActivity extends ShadowContextThemeWrapper {
   }
 
   @Implementation
-  public void startActivities(Intent[] intents) {
-    getApplication().startActivities(intents);
-  }
-
-  @Implementation
   public void startActivities(Intent[] intents, Bundle options) {
-    getApplication().startActivities(intents, options);
+    for (int i = intents.length - 1; i >= 0; i--) {
+      ShadowApplication.getInstance().startActivity(intents[i], options);
+    }
   }
 
   @Implementation
   public void startActivityForResult(Intent intent, int requestCode) {
     intentRequestCodeMap.put(new Intent.FilterComparison(intent), requestCode);
     startedActivitiesForResults.add(new IntentForResult(intent, requestCode));
-    getApplication().startActivity(intent);
+    ShadowApplication.getInstance().startActivity(intent);
   }
 
   @Implementation
   public void startActivityForResult(Intent intent, int requestCode, Bundle options) {
     intentRequestCodeMap.put(new Intent.FilterComparison(intent), requestCode);
     startedActivitiesForResults.add(new IntentForResult(intent, requestCode, options));
-    getApplication().startActivity(intent);
+    ShadowApplication.getInstance().startActivity(intent);
   }
 
   public void receiveResult(Intent requestIntent, int resultCode, Intent resultIntent) {
@@ -541,16 +524,6 @@ public class ShadowActivity extends ShadowContextThemeWrapper {
     invoker.call("onCreate", Bundle.class).with(outState);
     invoker.call("onStart").withNothing();
     invoker.call("onRestoreInstanceState", Bundle.class).with(outState);
-    invoker.call("onResume").withNothing();
-  }
-
-  public void pauseAndThenResume() {
-    final ActivityInvoker invoker = new ActivityInvoker();
-
-    invoker.call("onPause").withNothing();
-    invoker.call("onStop").withNothing();
-    invoker.call("onRestart").withNothing();
-    invoker.call("onStart").withNothing();
     invoker.call("onResume").withNothing();
   }
 
