Add support for Context.JOB_SCHEDULER_SERVICE (since api 21)

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowContextImpl.java.vm
@@ -92,6 +92,9 @@ public class ShadowContextImpl {
 #if ($api >= 19)
     SYSTEM_SERVICE_MAP.put(Context.PRINT_SERVICE, "android.print.PrintManager");
 #end
+#if ($api >= 21)
+    SYSTEM_SERVICE_MAP.put(Context.JOB_SCHEDULER_SERVICE, "android.app.JobSchedulerImpl");
+#end
   }
 
   @Implementation
