Implement TelecomManager.{registerPhoneAccount,unregisterPhoneAccount}() and related query / clear methods.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTelecomManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowTelecomManager.java.vm
@@ -7,21 +7,23 @@ import android.content.ComponentName;
 import android.content.Context;
 import android.net.Uri;
 import android.os.Bundle;
-import android.os.RemoteException;
-import android.os.ServiceManager;
 import android.telecom.PhoneAccount;
 import android.telecom.PhoneAccountHandle;
 import android.telecom.TelecomManager;
-import android.text.TextUtils;
-import android.util.Log;
-import com.android.internal.telecom.ITelecomService;
-import com.android.internal.telecom.ITelecomService.Stub;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+
+import com.google.common.collect.ImmutableList;
 
 import org.robolectric.annotation.Implementation;
 import org.robolectric.annotation.Implements;
+import org.robolectric.annotation.RealObject;
+import org.robolectric.util.ReflectionHelpers;
+
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.LinkedHashMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Set;
 
 /**
  * Shadow for {@link android.telecom.TelecomManager}.
@@ -29,7 +31,11 @@ import org.robolectric.annotation.Implements;
 @Implements(value = TelecomManager.class)
 public class ShadowTelecomManager {
 
+  @RealObject
+  private TelecomManager realObject;
+
   private PhoneAccountHandle simCallManager;
+  private LinkedHashMap<PhoneAccountHandle, PhoneAccount> accounts = new LinkedHashMap();
 
   @Implementation
   public PhoneAccountHandle getDefaultOutgoingPhoneAccount(String uriScheme) {
@@ -62,8 +68,18 @@ public class ShadowTelecomManager {
 
   @Implementation
   public List<PhoneAccountHandle> getPhoneAccountsSupportingScheme(String uriScheme) {
-    return new ArrayList();
+    List<PhoneAccountHandle> result = new LinkedList<>();
+
+    for (PhoneAccountHandle handle : accounts.keySet()) {
+      PhoneAccount phoneAccount = accounts.get(handle);
+      if(phoneAccount.getSupportedUriSchemes().contains(uriScheme)) {
+        result.add(handle);
+      }
+    }
+    return result;
   }
+
+#if ($api >= 23)
 
   @Implementation
   public List<PhoneAccountHandle> getCallCapablePhoneAccounts() {
@@ -72,56 +88,86 @@ public class ShadowTelecomManager {
 
   @Implementation
   public List<PhoneAccountHandle> getCallCapablePhoneAccounts(boolean includeDisabledAccounts) {
-    return new ArrayList();
+    List<PhoneAccountHandle> result = new LinkedList<>();
+
+    for (PhoneAccountHandle handle : accounts.keySet()) {
+      PhoneAccount phoneAccount = accounts.get(handle);
+      if(!phoneAccount.isEnabled() && !includeDisabledAccounts) {
+        continue;
+      }
+      result.add(handle);
+    }
+    return result;
   }
+
+#end
 
   @Implementation
   public List<PhoneAccountHandle> getPhoneAccountsForPackage() {
-    return null;
+    Context context = ReflectionHelpers.getField(realObject, "mContext");
+
+    List<PhoneAccountHandle> results = new LinkedList<>();
+    for (PhoneAccountHandle handle : accounts.keySet()) {
+      if (handle.getComponentName().getPackageName().equals(context.getPackageName())) {
+        results.add(handle);
+      }
+    }
+    return results;
   }
 
   @Implementation
   public PhoneAccount getPhoneAccount(PhoneAccountHandle account) {
-    return null;
+    return accounts.get(account);
   }
 
   @Implementation
   public int getAllPhoneAccountsCount() {
-    return 0;
+    return accounts.size();
   }
-
 
   @Implementation
   public List<PhoneAccount> getAllPhoneAccounts() {
-    return Collections.EMPTY_LIST;
+    return ImmutableList.copyOf(accounts.values());
   }
 
   @Implementation
   public List<PhoneAccountHandle> getAllPhoneAccountHandles() {
-    return Collections.EMPTY_LIST;
+    return ImmutableList.copyOf(accounts.keySet());
   }
 
   @Implementation
   public void registerPhoneAccount(PhoneAccount account) {
+    accounts.put(account.getAccountHandle(), account);
   }
 
   @Implementation
   public void unregisterPhoneAccount(PhoneAccountHandle accountHandle) {
-  }
-
-  @Implementation
-  public void clearPhoneAccounts() {
-    this.clearAccounts();
+    accounts.remove(accountHandle);
   }
 
   /** @deprecated */
   @Implementation
   public void clearAccounts() {
+    accounts.clear();
   }
 
+
+#if ($api >= 22)
   @Implementation
   public void clearAccountsForPackage(String packageName) {
+    Set<PhoneAccountHandle> phoneAccountHandlesInPackage = new HashSet<>();
+
+    for (PhoneAccountHandle handle : accounts.keySet()) {
+      if (handle.getComponentName().getPackageName().equals(packageName)) {
+        phoneAccountHandlesInPackage.add(handle);
+      }
+    }
+
+    for (PhoneAccountHandle handle : phoneAccountHandlesInPackage) {
+      accounts.remove(handle);
+    }
   }
+#end
 
   /** @deprecated */
   @Implementation
