Add finishAndRemoveTask implementation to ShadowActivity

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
@@ -190,6 +190,11 @@ public class ShadowActivity extends ShadowContextThemeWrapper {
     finishWasCalled = true;
   }
 
+  @Implementation
+  public void finishAndRemoveTask() {
+    finishWasCalled = true;
+  }
+
   public void resetIsFinishing() {
     finishWasCalled = false;
   }
