--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
@@ -190,10 +190,12 @@ public class ShadowActivity extends ShadowContextThemeWrapper {
     finishWasCalled = true;
   }
 
+#if ($api >= 23)
   @Implementation
   public void finishAndRemoveTask() {
     finishWasCalled = true;
   }
+#end
 
   public void resetIsFinishing() {
     finishWasCalled = false;
