Remove dependency of RoboAttributeSet on ResourceLoader / ResourceIndex. Prefer to use public Android framework APIs instead so we can limit the exposure to the internals of the Robolectric resource implementation.

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowActivity.java.vm
@@ -87,10 +87,7 @@ public class ShadowActivity extends ShadowContextThemeWrapper {
     String themeRef = appManifest.getThemeRef(realActivity.getClass());
 
     if (themeRef != null) {
-      ResName style = ResName.qualifyResName(themeRef.replace("@", ""), appManifest.getPackageName(), "style");
-      Integer themeRes = shadowOf(realActivity.getAssets()).getResourceLoader().getResourceIndex().getResourceId(style);
-      if (themeRes == null)
-        throw new Resources.NotFoundException("no such theme " + style.getFullyQualifiedName());
+      int themeRes = realActivity.getResources().getIdentifier(themeRef.replace("@", ""), "style", appManifest.getPackageName());
       realActivity.setTheme(themeRes);
       return true;
     }
