Remove rependency on ResName from ShadowResources, add overloaded methods on ResourceLoader that take resource ids

--- a/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
+++ b/robolectric-shadows/shadows-core/src/main/resources/org/robolectric/shadows/ShadowAssetManager.java.vm
@@ -782,7 +782,7 @@ public final class ShadowAssetManager {
     return attribute;
   }
 
-  @NotNull ResName getResName(int id) {
+  @NotNull private ResName getResName(int id) {
     ResName resName = resourceLoader.getResourceIndex().getResName(id);
     return checkResName(id, resName);
   }
